--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "antd": "^5.20.6",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "framer-motion": "^11.9.0",
     "lucide-react": "^0.439.0",
     "next": "14.2.7",
     "react": "^18",
