--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^11.9.0",
     "lucide-react": "^0.439.0",
-    "next": "14.2.7",
+    "next": "^14.2.24",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
